--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/tahashams12/Mern_Payment_System#readme",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "stripe": "^16.2.0"
   }
